Rewrote, ran, and saved results from new primary FIGO & survival analyses.

--- a/feature_selection_analysis/coxph_en.ipynb
+++ b/feature_selection_analysis/coxph_en.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "respective-international",
+   "id": "apparent-minimum",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "hawaiian-vatican",
+   "id": "living-court",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "champion-episode",
+   "id": "similar-anchor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "particular-instrument",
+   "id": "limiting-dinner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "atomic-neighborhood",
+   "id": "growing-component",
    "metadata": {},
    "outputs": [
     {
@@ -193,8 +193,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "hundred-resident",
+   "execution_count": 6,
+   "id": "automated-telephone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,8 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "overall-consumer",
+   "execution_count": 7,
+   "id": "anticipated-rochester",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,14 +226,13 @@
     "    x, y, family = \"cox\", alpha = 1, nfolds = 10, type.measure = \"C\",\n",
     "    lambda = exp(seq(-5, 0, 0.005)),\n",
     "    parallel = TRUE\n",
-    ")\n",
-    "# cph_model <- glmnet(x, y, family = \"cox\", alpha = 1)"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "advised-toddler",
+   "execution_count": 8,
+   "id": "crucial-field",
    "metadata": {},
    "outputs": [
     {
@@ -275,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "fresh-textbook",
+   "execution_count": 9,
+   "id": "average-heart",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,253 +283,29 @@
     "lambda_idx <- max(which(cv_cph_model$cvm > worst_score))\n",
     "\n",
     "\n",
-    "# Index associated with best cv performance\n",
-    "# cv_min_idx <- cv_cph_model$index[\"min\",]\n",
-    "cv_min_idx <- cv_cph_model$index[\"1se\",]\n",
-    "# best cv performance\n",
-    "cv_best_cvm <- cv_cph_model$cvm[cv_min_idx]\n",
-    "# Std. error assoc. with best cv performance\n",
-    "cv_best_se <- cv_cph_model$cvsd[cv_min_idx]\n",
-    "# model_mask <- cv_cph_model$cvm > cv_best_cvm - cv_best_se\n",
-    "# model_mask <- cv_cph_model$cvm < cv_best_cvm + cv_best_se\n",
-    "\n",
-    "# model_mask <- cv_cph_model$cvm == cv_best_cvm\n",
-    "# mask_lambda <- cv_cph_model$lambda[model_mask] %>% last()\n",
-    "# mask_lambda_genes <- as.matrix(coef(cv_cph_model, s = mask_lambda))[, 1] != 0\n",
-    "# mask_lambda <- cv_cph_model$lambda.min\n",
     "mask_lambda <- cv_cph_model$lambda[lambda_idx]\n",
     "mask_lambda_genes <- as.matrix(coef(cv_cph_model, s = mask_lambda))[, 1] != 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "textile-skiing",
+   "execution_count": 10,
+   "id": "formed-rough",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 48 × 2</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>geneID</th><th scope=col>coeff</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>KITLG   </td><td>-0.022569640</td></tr>\n",
-       "\t<tr><td>MEPE    </td><td> 0.450077695</td></tr>\n",
-       "\t<tr><td>MUC3A   </td><td> 0.103075302</td></tr>\n",
-       "\t<tr><td>FGG     </td><td>-0.290642436</td></tr>\n",
-       "\t<tr><td>P4HA3   </td><td> 0.240484276</td></tr>\n",
-       "\t<tr><td>CXCL14  </td><td> 0.114877387</td></tr>\n",
-       "\t<tr><td>CTSC    </td><td> 0.080202044</td></tr>\n",
-       "\t<tr><td>WNT16   </td><td>-1.452143708</td></tr>\n",
-       "\t<tr><td>COCH    </td><td> 0.104304199</td></tr>\n",
-       "\t<tr><td>ADAMTS8 </td><td>-0.046836992</td></tr>\n",
-       "\t<tr><td>ACAN    </td><td>-0.260696073</td></tr>\n",
-       "\t<tr><td>CHAD    </td><td> 0.405212291</td></tr>\n",
-       "\t<tr><td>ISM2    </td><td> 0.415332190</td></tr>\n",
-       "\t<tr><td>PRG3    </td><td>11.352331236</td></tr>\n",
-       "\t<tr><td>PROL1   </td><td> 0.708273183</td></tr>\n",
-       "\t<tr><td>DMBT1   </td><td>-0.087424375</td></tr>\n",
-       "\t<tr><td>RSPO2   </td><td> 0.714138363</td></tr>\n",
-       "\t<tr><td>WIF1    </td><td>-1.024029223</td></tr>\n",
-       "\t<tr><td>SERPINB2</td><td> 0.994915422</td></tr>\n",
-       "\t<tr><td>ITIH2   </td><td> 0.009132961</td></tr>\n",
-       "\t<tr><td>CSH1    </td><td> 1.778178915</td></tr>\n",
-       "\t<tr><td>FREM3   </td><td> 0.017668086</td></tr>\n",
-       "\t<tr><td>ADAMTS9 </td><td>-0.047013230</td></tr>\n",
-       "\t<tr><td>NPNT    </td><td> 0.245409767</td></tr>\n",
-       "\t<tr><td>CLEC19A </td><td>-1.240986468</td></tr>\n",
-       "\t<tr><td>GDF6    </td><td> 1.179906830</td></tr>\n",
-       "\t<tr><td>COLEC12 </td><td> 0.265945249</td></tr>\n",
-       "\t<tr><td>HYAL4   </td><td>-0.278770109</td></tr>\n",
-       "\t<tr><td>CFC1    </td><td>-0.706224086</td></tr>\n",
-       "\t<tr><td>CELA3A  </td><td> 0.011326783</td></tr>\n",
-       "\t<tr><td>IGFALS  </td><td> 0.717184533</td></tr>\n",
-       "\t<tr><td>IGSF10  </td><td> 0.533159373</td></tr>\n",
-       "\t<tr><td>MEGF10  </td><td> 0.240937914</td></tr>\n",
-       "\t<tr><td>PLXNB1  </td><td>-0.021319711</td></tr>\n",
-       "\t<tr><td>CCL1    </td><td> 3.295444438</td></tr>\n",
-       "\t<tr><td>IL12B   </td><td>-0.304203409</td></tr>\n",
-       "\t<tr><td>CLEC12B </td><td> 0.323723769</td></tr>\n",
-       "\t<tr><td>DMP1    </td><td>-0.067573475</td></tr>\n",
-       "\t<tr><td>MUC12   </td><td> 0.314292815</td></tr>\n",
-       "\t<tr><td>CCL27   </td><td>-0.174025505</td></tr>\n",
-       "\t<tr><td>CSPG4   </td><td>-0.054941550</td></tr>\n",
-       "\t<tr><td>CXCL6   </td><td> 0.229011656</td></tr>\n",
-       "\t<tr><td>MUC2    </td><td> 0.169068293</td></tr>\n",
-       "\t<tr><td>VWA5A   </td><td>-0.132276184</td></tr>\n",
-       "\t<tr><td>GDF2    </td><td>-8.517698863</td></tr>\n",
-       "\t<tr><td>COL11A1 </td><td> 0.135846426</td></tr>\n",
-       "\t<tr><td>CST11   </td><td>-3.120811193</td></tr>\n",
-       "\t<tr><td>IFNA4   </td><td>13.545632500</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
+       "48"
       ],
       "text/latex": [
-       "A tibble: 48 × 2\n",
-       "\\begin{tabular}{ll}\n",
-       " geneID & coeff\\\\\n",
-       " <chr> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t KITLG    & -0.022569640\\\\\n",
-       "\t MEPE     &  0.450077695\\\\\n",
-       "\t MUC3A    &  0.103075302\\\\\n",
-       "\t FGG      & -0.290642436\\\\\n",
-       "\t P4HA3    &  0.240484276\\\\\n",
-       "\t CXCL14   &  0.114877387\\\\\n",
-       "\t CTSC     &  0.080202044\\\\\n",
-       "\t WNT16    & -1.452143708\\\\\n",
-       "\t COCH     &  0.104304199\\\\\n",
-       "\t ADAMTS8  & -0.046836992\\\\\n",
-       "\t ACAN     & -0.260696073\\\\\n",
-       "\t CHAD     &  0.405212291\\\\\n",
-       "\t ISM2     &  0.415332190\\\\\n",
-       "\t PRG3     & 11.352331236\\\\\n",
-       "\t PROL1    &  0.708273183\\\\\n",
-       "\t DMBT1    & -0.087424375\\\\\n",
-       "\t RSPO2    &  0.714138363\\\\\n",
-       "\t WIF1     & -1.024029223\\\\\n",
-       "\t SERPINB2 &  0.994915422\\\\\n",
-       "\t ITIH2    &  0.009132961\\\\\n",
-       "\t CSH1     &  1.778178915\\\\\n",
-       "\t FREM3    &  0.017668086\\\\\n",
-       "\t ADAMTS9  & -0.047013230\\\\\n",
-       "\t NPNT     &  0.245409767\\\\\n",
-       "\t CLEC19A  & -1.240986468\\\\\n",
-       "\t GDF6     &  1.179906830\\\\\n",
-       "\t COLEC12  &  0.265945249\\\\\n",
-       "\t HYAL4    & -0.278770109\\\\\n",
-       "\t CFC1     & -0.706224086\\\\\n",
-       "\t CELA3A   &  0.011326783\\\\\n",
-       "\t IGFALS   &  0.717184533\\\\\n",
-       "\t IGSF10   &  0.533159373\\\\\n",
-       "\t MEGF10   &  0.240937914\\\\\n",
-       "\t PLXNB1   & -0.021319711\\\\\n",
-       "\t CCL1     &  3.295444438\\\\\n",
-       "\t IL12B    & -0.304203409\\\\\n",
-       "\t CLEC12B  &  0.323723769\\\\\n",
-       "\t DMP1     & -0.067573475\\\\\n",
-       "\t MUC12    &  0.314292815\\\\\n",
-       "\t CCL27    & -0.174025505\\\\\n",
-       "\t CSPG4    & -0.054941550\\\\\n",
-       "\t CXCL6    &  0.229011656\\\\\n",
-       "\t MUC2     &  0.169068293\\\\\n",
-       "\t VWA5A    & -0.132276184\\\\\n",
-       "\t GDF2     & -8.517698863\\\\\n",
-       "\t COL11A1  &  0.135846426\\\\\n",
-       "\t CST11    & -3.120811193\\\\\n",
-       "\t IFNA4    & 13.545632500\\\\\n",
-       "\\end{tabular}\n"
+       "48"
       ],
       "text/markdown": [
-       "\n",
-       "A tibble: 48 × 2\n",
-       "\n",
-       "| geneID &lt;chr&gt; | coeff &lt;dbl&gt; |\n",
-       "|---|---|\n",
-       "| KITLG    | -0.022569640 |\n",
-       "| MEPE     |  0.450077695 |\n",
-       "| MUC3A    |  0.103075302 |\n",
-       "| FGG      | -0.290642436 |\n",
-       "| P4HA3    |  0.240484276 |\n",
-       "| CXCL14   |  0.114877387 |\n",
-       "| CTSC     |  0.080202044 |\n",
-       "| WNT16    | -1.452143708 |\n",
-       "| COCH     |  0.104304199 |\n",
-       "| ADAMTS8  | -0.046836992 |\n",
-       "| ACAN     | -0.260696073 |\n",
-       "| CHAD     |  0.405212291 |\n",
-       "| ISM2     |  0.415332190 |\n",
-       "| PRG3     | 11.352331236 |\n",
-       "| PROL1    |  0.708273183 |\n",
-       "| DMBT1    | -0.087424375 |\n",
-       "| RSPO2    |  0.714138363 |\n",
-       "| WIF1     | -1.024029223 |\n",
-       "| SERPINB2 |  0.994915422 |\n",
-       "| ITIH2    |  0.009132961 |\n",
-       "| CSH1     |  1.778178915 |\n",
-       "| FREM3    |  0.017668086 |\n",
-       "| ADAMTS9  | -0.047013230 |\n",
-       "| NPNT     |  0.245409767 |\n",
-       "| CLEC19A  | -1.240986468 |\n",
-       "| GDF6     |  1.179906830 |\n",
-       "| COLEC12  |  0.265945249 |\n",
-       "| HYAL4    | -0.278770109 |\n",
-       "| CFC1     | -0.706224086 |\n",
-       "| CELA3A   |  0.011326783 |\n",
-       "| IGFALS   |  0.717184533 |\n",
-       "| IGSF10   |  0.533159373 |\n",
-       "| MEGF10   |  0.240937914 |\n",
-       "| PLXNB1   | -0.021319711 |\n",
-       "| CCL1     |  3.295444438 |\n",
-       "| IL12B    | -0.304203409 |\n",
-       "| CLEC12B  |  0.323723769 |\n",
-       "| DMP1     | -0.067573475 |\n",
-       "| MUC12    |  0.314292815 |\n",
-       "| CCL27    | -0.174025505 |\n",
-       "| CSPG4    | -0.054941550 |\n",
-       "| CXCL6    |  0.229011656 |\n",
-       "| MUC2     |  0.169068293 |\n",
-       "| VWA5A    | -0.132276184 |\n",
-       "| GDF2     | -8.517698863 |\n",
-       "| COL11A1  |  0.135846426 |\n",
-       "| CST11    | -3.120811193 |\n",
-       "| IFNA4    | 13.545632500 |\n",
-       "\n"
+       "48"
       ],
       "text/plain": [
-       "   geneID   coeff       \n",
-       "1  KITLG    -0.022569640\n",
-       "2  MEPE      0.450077695\n",
-       "3  MUC3A     0.103075302\n",
-       "4  FGG      -0.290642436\n",
-       "5  P4HA3     0.240484276\n",
-       "6  CXCL14    0.114877387\n",
-       "7  CTSC      0.080202044\n",
-       "8  WNT16    -1.452143708\n",
-       "9  COCH      0.104304199\n",
-       "10 ADAMTS8  -0.046836992\n",
-       "11 ACAN     -0.260696073\n",
-       "12 CHAD      0.405212291\n",
-       "13 ISM2      0.415332190\n",
-       "14 PRG3     11.352331236\n",
-       "15 PROL1     0.708273183\n",
-       "16 DMBT1    -0.087424375\n",
-       "17 RSPO2     0.714138363\n",
-       "18 WIF1     -1.024029223\n",
-       "19 SERPINB2  0.994915422\n",
-       "20 ITIH2     0.009132961\n",
-       "21 CSH1      1.778178915\n",
-       "22 FREM3     0.017668086\n",
-       "23 ADAMTS9  -0.047013230\n",
-       "24 NPNT      0.245409767\n",
-       "25 CLEC19A  -1.240986468\n",
-       "26 GDF6      1.179906830\n",
-       "27 COLEC12   0.265945249\n",
-       "28 HYAL4    -0.278770109\n",
-       "29 CFC1     -0.706224086\n",
-       "30 CELA3A    0.011326783\n",
-       "31 IGFALS    0.717184533\n",
-       "32 IGSF10    0.533159373\n",
-       "33 MEGF10    0.240937914\n",
-       "34 PLXNB1   -0.021319711\n",
-       "35 CCL1      3.295444438\n",
-       "36 IL12B    -0.304203409\n",
-       "37 CLEC12B   0.323723769\n",
-       "38 DMP1     -0.067573475\n",
-       "39 MUC12     0.314292815\n",
-       "40 CCL27    -0.174025505\n",
-       "41 CSPG4    -0.054941550\n",
-       "42 CXCL6     0.229011656\n",
-       "43 MUC2      0.169068293\n",
-       "44 VWA5A    -0.132276184\n",
-       "45 GDF2     -8.517698863\n",
-       "46 COL11A1   0.135846426\n",
-       "47 CST11    -3.120811193\n",
-       "48 IFNA4    13.545632500"
+       "[1] 48"
       ]
      },
      "metadata": {},
@@ -540,18 +315,18 @@
    "source": [
     "cv_cph_model_coeffs <- as.matrix(coef(cv_cph_model, s = mask_lambda))\n",
     "important_gene_df <- tibble(geneID = colnames(x)[mask_lambda_genes], coeff = cv_cph_model_coeffs[mask_lambda_genes])\n",
-    "important_gene_df"
+    "nrow(important_gene_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "pressing-decimal",
+   "execution_count": 11,
+   "id": "stretch-resort",
    "metadata": {},
    "outputs": [],
    "source": [
     "if (save_res) {\n",
-    "    write_tsv(important_gene_df, paste0(dirs$analysis_dir, \"/survival/\", unified_dsets[dset_idx], \"_en_cph_results.tsv\"))    \n",
+    "    write_tsv(important_gene_df, paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_en_cph_results.tsv\"))    \n",
     "}"
    ]
   }
