--- a/feature_selection_analysis/survival_cts.ipynb
+++ b/feature_selection_analysis/survival_cts.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "outstanding-financing",
+   "id": "exact-surprise",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "destroyed-reward",
+   "id": "electoral-carnival",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "canadian-fifth",
+   "id": "incredible-custody",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,13 +85,17 @@
     "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
     "projects <- c(\"TCGA-CESC\", \"TCGA-UCS\", \"TCGA-UCEC\", \"TCGA-OV\")\n",
     "unified_dsets <- c(\"unified_cervical_data\", \"unified_uterine_data\", \"unified_uterine_endometrial_data\")\n",
-    "matrisome_path <- paste0(dirs$data_dir, \"/matrisome/matrisome_hs_masterlist.tsv\")\n"
+    "matrisome_path <- paste0(dirs$data_dir, \"/matrisome/matrisome_hs_masterlist.tsv\")\n",
+    "\n",
+    "event_code <- list(\"Alive\" = 0, \"Dead\" = 1)\n",
+    "# covariate_cols <- c(\"figo_stage\", \"age_at_diagnosis\", \"race\", \"ethnicity\")\n",
+    "dep_cols <- c(\"vital_status\", \"survival_time\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "better-vanilla",
+   "id": "modified-think",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "voluntary-roulette",
+   "id": "continued-organization",
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +135,14 @@
       "\n",
       "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
+      "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
+      "  cutoff = \u001b[32mcol_double()\u001b[39m\n",
+      ")\n",
+      "\n",
+      "\n",
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
       ")\n",
@@ -141,86 +153,102 @@
     }
    ],
    "source": [
-    "event_code <- list(\"Alive\" = 0, \"Dead\" = 1)\n",
-    "\n",
+    "# Load and filter survival data\n",
     "survival_path <- paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/survival_data.tsv\")\n",
     "survival_df <- load_survival_df(survival_path, event_code)\n",
+    "umsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_demg_list.txt\"))\n",
+    "cutoff_df <- read_tsv(paste0(dirs$analysis_dir, \"/survival/\", unified_dsets[dset_idx], \"_expression_cutoffs.tsv\"))\n",
     "\n",
-    "# Load and filter survival data\n",
     "filtered_survival_df <- survival_df %>%\n",
-    "    decode_figo_stage(to = \"n\") %>%\n",
-    "    dplyr::select(sample_name, figo_stage) %>% # make sure using same samples as classification models\n",
-    "    dplyr::filter(rowSums(is.na(.)) == 0) %>%\n",
-    "    dplyr::mutate(figo_stage = as.character(figo_stage))\n",
+    "    dplyr::select(one_of(c(\"sample_name\", dep_cols))) %>%\n",
+    "    dplyr::filter(rowSums(is.na(.)) == 0)\n",
     "\n",
     "# Load normalized matrisome count data\n",
-    "norm_matrisome_counts_path <- paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/norm_matrisome_counts.tsv\")\n",
-    "norm_survival_counts_t_df <- read_tsv(norm_matrisome_counts_path) %>%\n",
+    "norm_matrisome_counts_df <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/norm_matrisome_counts.tsv\"))\n",
+    "norm_matrisome_counts_t_df <- norm_matrisome_counts_df %>%\n",
     "    dplyr::select(c(\"geneID\", filtered_survival_df$sample_name)) %>%\n",
     "    transpose_df(\"geneID\", \"sample_name\")\n",
-    "\n",
     "# Combine survival data and normalized count data\n",
     "joined_df <- filtered_survival_df %>%\n",
-    "    inner_join(norm_survival_counts_t_df, by = \"sample_name\")"
+    "    inner_join(norm_matrisome_counts_t_df, by = \"sample_name\") %>%\n",
+    "    # cannot have survival times of 0\n",
+    "    dplyr::filter(survival_time > 0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "faced-confirmation",
+   "id": "cubic-equation",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y <- to_one_hot(joined_df, \"figo_stage\") %>% as.matrix()\n",
-    "rownames(y) <- joined_df$sample_name\n",
-    "x <- joined_df[-c(1:2)] %>% as.matrix()\n",
+    "x <- joined_df[-c(1:3)] %>% as.matrix()\n",
     "rownames(x) <- joined_df$sample_name"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dedicated-minutes",
+   "id": "possible-robertson",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n"
+     ]
+    }
+   ],
    "source": [
-    "gene_cor <- WGCNA::cor(x, y, use = \"p\")\n",
-    "\n",
-    "# Remove NA since qvalue can't handle them\n",
-    "gene_pval <- corPvalueStudent(gene_cor, nrow(x)) %>%\n",
-    "    as_tibble(rownames = \"geneID\") %>%\n",
-    "    dplyr::filter(rowSums(is.na(.)) == 0) %>%\n",
-    "    column_to_rownames(\"geneID\") %>%\n",
-    "    as.matrix()\n",
-    "\n",
-    "gene_qval <- apply(gene_pval, MARGIN = 2, function(x) { WGCNA::qvalue(x)$qvalues })\n",
-    "colnames(gene_cor) <- gsub(\"$\", \"_cor\", colnames(gene_cor))\n",
-    "colnames(gene_pval) <- gsub(\"$\", \"_pval\", colnames(gene_pval))\n",
-    "colnames(gene_qval) <- gsub(\"$\", \"_qval\", colnames(gene_qval))"
+    "cts_df <- standardScreeningCensoredTime(\n",
+    "    datExpr = x,\n",
+    "    time = joined_df$survival_time,\n",
+    "    event = joined_df$vital_status,\n",
+    "    fastCalculation = FALSE,\n",
+    "    qValues = TRUE\n",
+    ") %>% \n",
+    "    as_tibble() %>%\n",
+    "    dplyr::select(ID, pvalueLogrank, qvalueLogrank, HazardRatio) %>%\n",
+    "    dplyr::rename(geneID = ID, vital_pval = pvalueLogrank, vital_qval = qvalueLogrank, hr = HazardRatio)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "representative-marriage",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pbc_df <- gene_pval %>%\n",
-    "    as_tibble(rownames = \"geneID\") %>%\n",
-    "    inner_join(as_tibble(gene_qval, rownames = \"geneID\"), by = \"geneID\") %>%\n",
-    "    inner_join(as_tibble(gene_cor, rownames = \"geneID\"), by = \"geneID\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "pregnant-circular",
+   "id": "bizarre-union",
    "metadata": {},
    "outputs": [],
    "source": [
     "if (save_res) {\n",
-    "    write_tsv(pbc_df, paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_pbc_results.tsv\"))\n",
+    "    write_tsv(cts_df, paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_survival_cts_results.tsv\"))\n",
     "}"
    ]
   }
