--- a/feature_selection_analysis/multinomial_en.ipynb
+++ b/feature_selection_analysis/multinomial_en.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "northern-graph",
+   "id": "eight-helena",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "registered-baltimore",
+   "id": "precious-colon",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "consecutive-removal",
+   "id": "human-guard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "extended-hudson",
+   "id": "banned-earthquake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "swiss-hostel",
+   "id": "personal-oklahoma",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "minimal-formula",
+   "id": "ruled-beverage",
    "metadata": {},
    "outputs": [
     {
@@ -188,18 +188,8 @@
     "# Load and filter survival data\n",
     "filtered_survival_df <- survival_df %>%\n",
     "    decode_figo_stage(to = \"c\") %>%\n",
-    "#     dplyr::select(sample_name, figo_stage, age_at_diagnosis, race, ethnicity) %>% # make sure using same samples as classification models\n",
     "    dplyr::select(sample_name, figo_stage) %>% # make sure using same samples as classification models\n",
     "    dplyr::filter(rowSums(is.na(.)) == 0)\n",
-    "#     dplyr::select(sample_name, figo_stage)\n",
-    "\n",
-    "# dummy_model <- dummyVars(~ race + ethnicity, data = filtered_survival_df)\n",
-    "# dummy_vars <- predict(dummy_model, newdata = filtered_survival_df)\n",
-    "\n",
-    "# filtered_survival_df <- filtered_survival_df %>%\n",
-    "#     bind_cols(as_tibble(dummy_vars)) %>%\n",
-    "#     dplyr::select(-c(ethnicity, race)) %>%\n",
-    "#     dplyr::rename_with(~ gsub(\" \", \"_\", .))\n",
     "\n",
     "# Load normalized matrisome count data\n",
     "norm_matrisome_counts_path <- paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/norm_matrisome_counts.tsv\")\n",
@@ -209,14 +199,13 @@
     "\n",
     "# Combine survival data and normalized count data\n",
     "joined_df <- filtered_survival_df %>%\n",
-    "    inner_join(norm_survival_counts_t_df, by = \"sample_name\")\n",
-    "#     dplyr::select(one_of(c(\"sample_name\", \"figo_stage\", demg_list)))"
+    "    inner_join(norm_survival_counts_t_df, by = \"sample_name\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "consistent-newfoundland",
+   "id": "digital-forwarding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "whole-sponsorship",
+   "id": "latter-massage",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "considered-housing",
+   "id": "progressive-decimal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "under-enclosure",
+   "id": "widespread-permit",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "wired-closer",
+   "id": "latter-decline",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "organizational-alabama",
+   "id": "educational-cigarette",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "swiss-interstate",
+   "id": "hazardous-creek",
    "metadata": {},
    "outputs": [
     {
@@ -443,12 +432,6 @@
     "# Last index better than worst best score of any cancer model\n",
     "lambda_idx <- max(which(cv_mr_model$cvm < worst_score))\n",
     "\n",
-    "cv_min_idx <- cv_mr_model$index[\"min\",]\n",
-    "# best cv performance\n",
-    "cv_best_cvm <- cv_mr_model$cvm[cv_min_idx]\n",
-    "# Std. error assoc. with best cv performance\n",
-    "cv_best_se <- cv_mr_model$cvsd[cv_min_idx]\n",
-    "\n",
     "# mask_lambda <- cv_mr_model$lambda.min\n",
     "# mask_lambda_genes <- as.matrix(coef(cv_mr_model, s = mask_lambda))[, 1] != 0\n",
     "# subscript [-1, ...] is to skip the coefficient\n",
@@ -463,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competent-leadership",
+   "id": "palestinian-induction",
    "metadata": {},
    "source": [
     "## Weighted baseline"
@@ -472,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "valuable-israel",
+   "id": "metropolitan-ordinary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "lasting-copper",
+   "id": "minus-dealer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "framed-essay",
+   "id": "conventional-respondent",
    "metadata": {},
    "outputs": [
     {
@@ -515,13 +498,14 @@
     }
    ],
    "source": [
-    "weighted_baseline"
+    "weighted_baseline\n",
+    "cv_best_cvm <- cv_mr_model$cvm[cv_mr_model$index[\"min\",]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cardiovascular-measure",
+   "id": "local-freeware",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "nuclear-survivor",
+   "id": "selective-pollution",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "heard-joyce",
+   "id": "conceptual-combination",
    "metadata": {},
    "outputs": [],
    "source": [
