--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "imported-florence",
+   "id": "emerging-mileage",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bound-response",
+   "id": "handled-bangkok",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "purple-journalist",
+   "id": "charged-viewer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "incorporate-warren",
+   "id": "swedish-filing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dimensional-eating",
+   "id": "computational-smoke",
    "metadata": {},
    "source": [
     "# Functions"
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "technical-capitol",
+   "id": "resistant-effectiveness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "middle-homework",
+   "id": "available-agriculture",
    "metadata": {},
    "source": [
     "# Data"
@@ -109,8 +109,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "downtown-setting",
-   "metadata": {},
+   "id": "political-daniel",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -276,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "facial-smooth",
+   "id": "integrated-harmony",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -284,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "useful-stuart",
+   "id": "unauthorized-equality",
    "metadata": {},
    "source": [
     "## DEG"
@@ -293,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "naughty-flexibility",
+   "id": "incorporate-activation",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hundred-candidate",
+   "id": "tired-permission",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -364,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "proof-villa",
+   "id": "worse-investor",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "directed-championship",
+   "id": "adult-casino",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -436,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "primary-passport",
+   "id": "international-rental",
    "metadata": {},
    "source": [
     "## Welch ANOVA"
@@ -445,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "virgin-advance",
+   "id": "japanese-barrier",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alike-corner",
+   "id": "european-mississippi",
    "metadata": {},
    "source": [
     "## MI"
@@ -484,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "amazing-baseline",
+   "id": "adolescent-philosophy",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continued-conditioning",
+   "id": "strategic-venice",
    "metadata": {},
    "source": [
     "## Bicor"
@@ -523,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "utility-favor",
+   "id": "martial-teaching",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hundred-variety",
+   "id": "valid-herald",
    "metadata": {},
    "source": [
     "# ML baselines"
@@ -567,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "beneficial-bookmark",
+   "id": "pointed-counter",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competitive-remark",
+   "id": "muslim-office",
    "metadata": {},
    "source": [
     "# LR (L1)"
@@ -641,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "olive-validation",
+   "id": "junior-wedding",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "overhead-stationery",
+   "id": "understanding-salon",
    "metadata": {},
    "source": [
     "## How do uni/multivariate analyses overlap?"
@@ -712,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "biblical-adaptation",
+   "id": "taken-sculpture",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "manual-arthur",
+   "id": "therapeutic-mailing",
    "metadata": {},
    "source": [
     "# Multinomial (EN)"
@@ -787,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "consistent-handy",
+   "id": "fleet-gothic",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dimensional-shepherd",
+   "id": "documented-score",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -825,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "arabic-chart",
+   "id": "removable-computer",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "shaped-scroll",
+   "id": "interracial-depression",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "domestic-procurement",
+   "id": "opposed-resolution",
    "metadata": {},
    "source": [
     "## TOM meta"
@@ -901,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "outdoor-carrier",
+   "id": "joint-bumper",
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "global-bernard",
+   "id": "honest-scheme",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -960,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "wooden-refund",
+   "id": "comprehensive-farmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "written-knitting",
+   "id": "cathedral-sword",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "classical-principal",
+   "id": "hybrid-chuck",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -1138,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "contained-flooring",
+   "id": "dental-helen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "light-pharmacy",
+   "id": "neither-denial",
    "metadata": {},
    "outputs": [],
    "source": []
