Added FIGO figure & updated survival figure.

--- a/feature_selection_analysis/multinomial_en.ipynb
+++ b/feature_selection_analysis/multinomial_en.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eight-helena",
+   "id": "acquired-assault",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "precious-colon",
+   "id": "facial-jumping",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "human-guard",
+   "id": "particular-answer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "banned-earthquake",
+   "id": "registered-brick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "personal-oklahoma",
+   "id": "logical-webcam",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ruled-beverage",
+   "id": "deluxe-technology",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "digital-forwarding",
+   "id": "infectious-survival",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "latter-massage",
+   "id": "proprietary-introduction",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "progressive-decimal",
+   "id": "divine-customer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "widespread-permit",
+   "id": "egyptian-commitment",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "latter-decline",
+   "id": "romance-brooks",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "educational-cigarette",
+   "id": "union-string",
    "metadata": {},
    "outputs": [
     {
@@ -406,9 +406,63 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "hazardous-creek",
+   "id": "beginning-negative",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -437,16 +491,32 @@
     "# subscript [-1, ...] is to skip the coefficient\n",
     "# Since we're using \"grouped\", coefficients are same for each level of figo stage\n",
     "mask_lambda <- cv_mr_model$lambda[lambda_idx]\n",
-    "mask_lambda_1 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_1)[-1, 1] != 0\n",
-    "# mask_lambda_2 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_2)[-1, 1] != 0\n",
-    "# mask_lambda_3 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_3)[-1, 1] != 0\n",
-    "# mask_lambda_4 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_4)[-1, 1] != 0\n",
+    "mask_1 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_1)[-1, 1] != 0\n",
+    "mask_2 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_2)[-1, 1] != 0\n",
+    "mask_3 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_3)[-1, 1] != 0\n",
+    "mask_4 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_4)[-1, 1] != 0\n",
+    "all(mask_1 == mask_2)\n",
+    "all(mask_1 == mask_3)\n",
+    "all(mask_1 == mask_4)\n",
     "mask_lambda"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "novel-vegetarian",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coefs_1 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_1)[-1, 1]\n",
+    "coefs_2 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_2)[-1, 1]\n",
+    "coefs_3 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_3)[-1, 1]\n",
+    "coefs_4 <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_4)[-1, 1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "palestinian-induction",
+   "id": "reported-creature",
    "metadata": {},
    "source": [
     "## Weighted baseline"
@@ -454,8 +524,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "metropolitan-ordinary",
+   "execution_count": 15,
+   "id": "contained-relationship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,8 +534,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "minus-dealer",
+   "execution_count": 16,
+   "id": "arbitrary-wallace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,8 +544,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "conventional-respondent",
+   "execution_count": 17,
+   "id": "automated-robin",
    "metadata": {},
    "outputs": [
     {
@@ -504,8 +574,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "local-freeware",
+   "execution_count": 18,
+   "id": "supreme-therapist",
    "metadata": {},
    "outputs": [
     {
@@ -533,8 +603,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "selective-pollution",
+   "execution_count": 19,
+   "id": "transparent-florida",
    "metadata": {},
    "outputs": [
     {
@@ -557,14 +627,20 @@
     }
    ],
    "source": [
-    "important_gene_df <- tibble(geneID = colnames(x)[mask_lambda_1])\n",
+    "important_gene_df <- tibble(\n",
+    "    geneID = colnames(x)[mask_1],\n",
+    "    figo_stage_1_coefs = coefs_1[mask_1],\n",
+    "    figo_stage_2_coefs = coefs_1[mask_1],\n",
+    "    figo_stage_3_coefs = coefs_1[mask_1],\n",
+    "    figo_stage_4_coefs = coefs_1[mask_1],\n",
+    ")\n",
     "nrow(important_gene_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "conceptual-combination",
+   "execution_count": 20,
+   "id": "finnish-assist",
    "metadata": {},
    "outputs": [],
    "source": [
