--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "premier-facing",
+   "id": "configured-indiana",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "advisory-range",
+   "id": "sunrise-basement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "lasting-columbia",
+   "id": "going-horse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "protected-device",
+   "id": "civic-jersey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "separated-florida",
+   "id": "imported-barrel",
    "metadata": {},
    "source": [
     "# Functions"
@@ -85,14 +85,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "looking-computer",
+   "id": "sitting-means",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "funded-vaccine",
+   "id": "thirty-millennium",
    "metadata": {},
    "source": [
     "# Data"
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "generous-fashion",
+   "id": "simplified-subject",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,11 @@
       "\n",
       "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m--------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
-      "  geneID = \u001b[31mcol_character()\u001b[39m\n",
+      "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
+      "  figo_stage_1_coefs = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_2_coefs = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_3_coefs = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage_4_coefs = \u001b[32mcol_double()\u001b[39m\n",
       ")\n",
       "\n",
       "\n",
@@ -276,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "obvious-johnson",
+   "id": "reflected-mayor",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -284,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dried-spare",
+   "id": "referenced-moldova",
    "metadata": {},
    "source": [
     "## DEG"
@@ -293,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ecological-commander",
+   "id": "loved-surgery",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "critical-parts",
+   "id": "genuine-peoples",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -364,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "numeric-governor",
+   "id": "generic-episode",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "academic-compromise",
+   "id": "opened-diana",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -436,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "characteristic-amino",
+   "id": "trained-budapest",
    "metadata": {},
    "source": [
     "## FIGO"
@@ -444,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "objective-prevention",
+   "id": "embedded-algeria",
    "metadata": {},
    "source": [
     "### LASSO multinomial regression"
@@ -453,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "pretty-method",
+   "id": "normal-decade",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "manufactured-crown",
+   "id": "streaming-camera",
    "metadata": {},
    "source": [
     "### Welch ANOVA"
@@ -492,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "affecting-provision",
+   "id": "adjusted-canvas",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyrighted-africa",
+   "id": "dimensional-rapid",
    "metadata": {},
    "source": [
     "### Point-biserial correlation with FIGO"
@@ -531,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "essential-imperial",
+   "id": "cathedral-bahrain",
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "federal-thanks",
+   "id": "absolute-distinction",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "understood-magnitude",
+   "id": "thrown-determination",
    "metadata": {},
    "source": [
     "## Survival"
@@ -639,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ignored-nightlife",
+   "id": "celtic-jacob",
    "metadata": {},
    "source": [
     "### LASSO Cox PH"
@@ -648,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "representative-louis",
+   "id": "designing-employee",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ruled-warner",
+   "id": "racial-result",
    "metadata": {},
    "source": [
     "### Univariate KM/Cox PH"
@@ -687,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "destroyed-importance",
+   "id": "transparent-private",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blind-produce",
+   "id": "dirty-address",
    "metadata": {},
    "source": [
     "### Censored time screen"
@@ -728,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dependent-columbia",
+   "id": "reliable-collectible",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "federal-living",
+   "id": "acceptable-realtor",
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "charged-suite",
+   "id": "appreciated-jenny",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -836,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "particular-quest",
+   "id": "transparent-seven",
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bigger-press",
+   "id": "transparent-knight",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "integral-shark",
+   "id": "multiple-fantasy",
    "metadata": {},
    "source": [
     "## TOM meta"
@@ -912,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ranging-ordering",
+   "id": "communist-reset",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "friendly-details",
+   "id": "appointed-davis",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -971,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "spoken-blond",
+   "id": "inclusive-auckland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "rubber-muscle",
+   "id": "soviet-basement",
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pleasant-roberts",
+   "id": "integral-flooring",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -1187,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "running-classic",
+   "id": "sudden-tackle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "violent-overhead",
+   "id": "champion-preliminary",
    "metadata": {},
    "outputs": [],
    "source": []
